--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.2.0"
 description = "Python interface to Train Simulator Classic"
 authors = ["Piotr Kilczuk <piotr@tymaszweb.pl>", "Kristian Zarebski <krizar312@gmail.com>"]
 license = "MIT"
-readme = "README.rst"
+readme = "README.md"
 classifiers = [
     'Development Status :: 5 - Production/Stable',
     'Intended Audience :: Developers',
